# readcon-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  meson.build  pixi.toml  pyproject.toml  readme_src.org
.github/workflows/: build_test.yml  ci_benchmark.yml  ci_docs.yml  coverage.yml  lint.yml  python_wheels.yml  release.yml
benches/: iterator_bench.rs
docs/: export.el
docs/orgmode/: architecture.org  bindings.org  changelog.org  contributing.org  index.org  rpc.org  spec.org  tutorials.org
docs/source/: conf.py
examples/: c_api_sample.c  cpp_api_sample.cpp  rust_usage.rs
include/: readcon-core.h  readcon-core.hpp
julia/ReadCon/: Project.toml
julia/ReadCon/src/: ReadCon.jl  types.jl  wrapper.jl
julia/ReadCon/test/: runtests.jl
resources/test/: tiny_cuh2.convel  tiny_multi_cuh2.convel
schema/: ReadCon.capnp
src/: error.rs  ffi.rs  iterators.rs  lib.rs  parser.rs  python.rs  types.rs  writer.rs
src/rpc/: client.rs  mod.rs  server.rs
tests/: convelwriter.rs  conwriter.rs  parsecon.rs  parseconvel.rs
tests/python/: test_readcon.py
